Added several nginx configs + some minor improvements

--- a/DataContainer/nginx-conf/Dockerfile
+++ b/DataContainer/nginx-conf/Dockerfile
@@ -5,7 +5,14 @@
 FROM resin/rpi-raspbian
 MAINTAINER Benny Li <benny@benny-li.de>
 
-COPY nginx.conf /etc/nginx/nginx.conf
+RUN mdkir -p /etc/nginx/global && \
+    mdkir -p /etc/nginx/sites-available
+
+COPY nginx/nginx.conf /etc/nginx/nginx.conf
+COPY nginx/site-available/benny-li.conf /etc/nginx/site-available/benny-li.conf
+COPY nginx/site-available/benny-li-ssl.conf /etc/nginx/site-available/benny-li-ssl.conf
+
+# TODO COPY CERT FILES !!!
 
 VOLUME ["/etc/nginx"]
 CMD ["true"]
