--- a/DataContainer/nginx-conf/nginx/sites-available/apps/gateone.conf
+++ b/DataContainer/nginx-conf/nginx/sites-available/apps/gateone.conf
@@ -1,11 +1,13 @@
+include global/gateone-upstream.conf
+
 location ^~ /gateone {
-  root /usr/local/lib/python2.7/dist-packages/gateone-1.2.0-py2.7.egg/;
-  try_files $uri $uri/index.html $uri.html @gateone;
+  # Mount this folder with a docker volume!
+  root /var/www/gateone;
+  try_files $uri $uri/index.html $uri.html @gateoneproxy;
 }
 
-location @gateone {
-#  proxy_pass http://unix:/tmp/gateone.sock;
-  proxy_pass http://localhost:8021;
+location @gateoneproxy {
+  proxy_pass http://gateone;
 
   proxy_redirect off;
   proxy_pass_header Server;
@@ -15,7 +17,7 @@ location @gateone {
   proxy_read_timeout 86400;
 
   # Setup WebSockets
-  # see http://nginx.org/en/docs/http/websocket.html 
+  # see http://nginx.org/en/docs/http/websocket.html
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection "upgrade";
