--- a/DataContainer/nginx-conf/nginx/sites-available/apps/todo_redmine.conf
+++ b/DataContainer/nginx-conf/nginx/sites-available/apps/todo_redmine.conf
@@ -1,3 +1,7 @@
+# see
+#   https://www.nginx.com/resources/wiki/start/topics/recipes/redmine/
+#
+
 location ^~ /redmine {
 
 	root /var/www/redmine252;
