--- a/DataContainer/nginx-conf/nginx/sites-available/benny-li-ssl.conf
+++ b/DataContainer/nginx-conf/nginx/sites-available/benny-li-ssl.conf
@@ -1,34 +1,27 @@
-upstream redmine {
-	server 127.0.0.1:3000;
-#	server 127.0.0.1:3001;
-#	server 127.0.0.1:3002;
-} 
-
 server {
-	#server_name benny-li.de;
-        listen 443 ssl;
-        ssl on;
-        ssl_certificate /etc/nginx/certs/server.chained.crt;
-        ssl_certificate_key /etc/nginx/certs/server.key;
+	server_name benny-li.de;
+  listen 443 ssl;
+  ssl on;
+  ssl_certificate /etc/nginx/certs/server.chained.crt;
+  ssl_certificate_key /etc/nginx/certs/server.key;
 
-	root /var/www/wordpress;
-	index index.php;
+	root /var/www;
+
+	limit_conn wwwpi 64;
+
+	# Support for favicon. Return a 1x1 transparent GIF it it doesn't
+	# exist.
+	location = /favicon.ico {
+	    try_files /favicon.ico @empty;
+	}
+
+	location @empty {
+	    empty_gif;
+	}
+
+
+
 	include global/restrictions.conf;
 
-#	include /etc/nginx/sites-available/horde.conf;
-	include /etc/nginx/sites-available/owncloud;
-	include /etc/nginx/sites-available/redmine.conf;
-
-	# Additional rules go here. Only include one of the files below.
-	include global/wordpress-ms-subdir.conf; 
-#	include /etc/nginx/sites-available/ghost-ssl.conf;
-#	include /etc/nginx/sites-available/laverna.conf;
-
-#	include /etc/nginx/sites-available/nas-webmail.conf;
-#	include /etc/nginx/sites-available/gateone.conf;
-#	include /etc/nginx/sites-available/nas-gateone.conf;
-	include /etc/nginx/sites-available/roundcube.conf;
-	include /etc/nginx/sites-available/ttrss.conf;
-#	include /etc/nginx/sites-available/nas-webdav.conf;
-	include /etc/nginx/sites-available/wallabag.conf;
+	include sites-enabled/apps/*.conf;
 }
