--- a/DataContainer/nginx-conf/nginx/nginx.conf
+++ b/DataContainer/nginx-conf/nginx/nginx.conf
@@ -1,48 +1,115 @@
+#
+# sources
+#   Hardening
+#      * [SSL Server Test](https://www.ssllabs.com/ssltest/)
+#      * http://www.nginxtips.com/hardening-nginx-ssl-tsl-configuration/
+#      * https://fralef.me/piwik-hardening-with-nginx-and-php-fpm.html
+#      * http://www.nginxtips.com/wordpress-brute-force-attacks/
+#   Other
+#      * https://github.com/perusio/piwik-nginx
+#
+
 # Generic startup file.
 user www-data;
 
-# ususally equal to number of CPU's you have. run command "grep processor /proc/cpuinfo | wc -l" to find it
-worker_processes 1; 
+# ususally equal to number of CPU's you have.
+# run command "grep processor /proc/cpuinfo | wc -l" to find it
+# as the RPi One only has one core this is set to 1 by default
+worker_processes 1;
 
-error_log /var/log/nginx/error.log; 
+error_log /var/log/nginx/error.log;
 pid /var/run/nginx.pid;
 
-# Keeps the logs free of messages about not being able to bind(). 
-#daemon off;
+# Keeps the logs free of messages about not being able to bind().
+daemon off;
 
 events {
 	worker_connections 1024;
+  ## epoll is preferred on 2.6 Linux
+  ## kernels. Cf. http://www.kegel.com/c10k.html#nb.epoll
+  use epoll;
+  ## Accept as many connections as possible.
+  multi_accept on;
 }
 
 http {
+	# MIME types
+	include mime.types;
+	default_type application/octet-stream;
+
+	# SSL Security optimizations
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_prefer_server_ciphers on;
-#	ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
 	ssl_ciphers 'ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4';
 
-	rewrite_log 	on;
+	rewrite_log on;
 	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
 
-	include 	mime.types;
-	default_type 	application/octet-stream;
+  ## Use sendfile() syscall to speed up I/O operations and speed up
+  ## static file serving.
+  sendfile        on;
+  ## Handling of IPs in proxied and load balancing situations.
+  set_real_ip_from 0.0.0.0/32; # all addresses get a real IP.
+  real_ip_header X-Forwarded-For; # the ip is forwarded from the load balancer/proxy
 
-	sendfile on;
-#	tcp_nopush on;
-	keepalive_timeout 3;
-#	tcp_nodelay on; 
+	## Define a zone for limiting the number of simultaneous
+  ## connections nginx accepts. 1m means 32000 simultaneous
+  ## sessions. We need to define for each server the limit_conn
+  ## value refering to this or other zones.
+  limit_conn_zone $binary_remote_addr zone=wwwpi:1m;
 
-#	gzip on;
+  ## Timeouts.
+  client_body_timeout             60;
+  client_header_timeout           60;
+  keepalive_timeout            10 10;
+  send_timeout                    60;
 
-        # php max upload limit cannot be larger than this
-	client_max_body_size 13m;
+  ## Reset lingering timed out connections. Deflect DDoS.
+  reset_timedout_connection on;
 
-	index index.php index.html index.htm;
+  # php max upload limit cannot be larger than this
+	client_max_body_size 25m;
 
-	# Upstream to abstract backend connection(s) for PHP.
-	upstream php {
-                # this should match value of "listen" directive in php-fpm pool
-		server unix:/var/run/php5-fpm.sock;
-	}
+  ## TCP options.
+  tcp_nodelay on;
+  ## Optimization of socket handling when using sendfile.
+  tcp_nopush on;
 
-	include sites-enabled/*;
+
+  ## Compression.
+  gzip              on;
+  gzip_buffers      16 8k;
+  gzip_comp_level   1;
+  gzip_http_version 1.1;
+  gzip_min_length   10;
+  gzip_types        text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon application/vnd.ms-fontobject font/opentype application/x-font-ttf;
+  gzip_vary         on;
+  gzip_proxied      any; # Compression for all requests.
+  ## No need for regexps. See
+  ## http://wiki.nginx.org/NginxHttpGzipModule#gzip_disable
+  gzip_disable "msie6";
+
+  ## Serve already compressed files directly, bypassing on-the-fly
+  ## compression.
+  gzip_static on;
+
+  ## Hide the Nginx version number.
+  server_tokens off;
+
+  ## Use a SSL/TLS cache for SSL session resume. This needs to be
+  ## here (in this context, for session resumption to work. See this
+  ## thread on the Nginx mailing list:
+  ## http://nginx.org/pipermail/nginx/2010-November/023736.html.
+  ssl_session_cache shared:SSL:10m;
+  ssl_session_timeout 10m;
+
+  ## Enable clickjacking protection in modern browsers. Available in
+  ## IE8 also. See
+  ## https://developer.mozilla.org/en/The_X-FRAME-OPTIONS_response_header
+  add_header X-Frame-Options SAMEORIGIN;
+
+	index index.html index.htm;
+
+	include sites-enabled/*.conf;
 }
