--- a/RaspberryPi/nginx/Dockerfile
+++ b/RaspberryPi/nginx/Dockerfile
@@ -82,4 +82,6 @@ VOLUME ["/etc/nginx"]
 
 EXPOSE 80 443
 
+COPY "entrypoint.sh" "/entrypoint.sh"
+ENTRYPOINT ["entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
