Adjusting nginx config files

--- a/DataContainer/nginx-conf/nginx/sites-available/apps/owncloud.conf
+++ b/DataContainer/nginx-conf/nginx/sites-available/apps/owncloud.conf
@@ -1,57 +1,88 @@
 # see also https://www.howtoforge.com/running-owncloud-5.0-on-nginx-lemp-on-debian-wheezy
 
-location ^~ /owncloud/ {
-	root /var/www/;
+include global/php-upstream.conf
 
-	client_max_body_size 10G; # set max upload size
-        fastcgi_buffers 64 4K;
+location ^~ /owncloud {
+
+	# Access and error log files.
+	access_log /var/log/nginx/owncloud_bennyli.de_access.log;
+	error_log /var/log/nginx/owncloud_bennyli.de_error.log;
+
+  index index.php
+
+	client_max_body_size 1G; # set max upload size
+  fastcgi_buffers 64 4K;
 
 	rewrite ^/caldav(.*)$ /owncloud/remote.php/caldav$1 redirect;
-        rewrite ^/carddav(.*)$ /owncloud/remote.php/carddav$1 redirect;
-      	rewrite ^/webdav(.*)$ /owncloud/remote.php/webdav$1 redirect;
+	rewrite ^/carddav(.*)$ /owncloud/remote.php/carddav$1 redirect;
+	rewrite ^/webdav(.*)$ /owncloud/remote.php/webdav$1 redirect;
 
-        index index.php;
-      	error_page 403 /owncloud/core/templates/403.php;
-        error_page 404 /owncloud/core/templates/404.php;
+	rewrite ^/.well-known/carddav /owncloud/remote.php/carddav/ redirect;
+	rewrite ^/.well-known/caldav /owncloud/remote.php/caldav/ redirect;
 
-        location = /owncloud/robots.txt {
-      		allow all;
+	rewrite ^/owncloud(/core/doc/[^\/]+/)$ /owncloud/$1/index.html;
+
+	# TODO Is this necessary or could this be rooted to index.php
+	# for security?
+  try_files $uri /index.php?$query_string;
+
+	error_page 403 /owncloud/core/templates/403.php;
+	error_page 404 /owncloud/core/templates/404.php;
+
+	location = /owncloud/robots.txt {
+		allow all;
 		log_not_found off;
 		access_log off;
 	}
 
 	location ~ ^/owncloud/(data|config|\.ht|db_structure\.xml|README) {
-              	deny all;
-        }
+		deny all;
+	}
 
-	location /owncloud/ {
-              	# The following 2 rules are only needed with webfinger
-                # rewrite ^/.well-known/host-meta /public.php?service=host-meta last;
-                # rewrite ^/.well-known/host-meta.json /public.php?service=host-meta-json last;
+	location = /owncloud/index.php {
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+    if (!-f $document_root$fastcgi_script_name) {
+        return 404;
+    }
 
-                rewrite ^/.well-known/carddav /owncloud/remote.php/carddav/ redirect;
-                rewrite ^/.well-known/caldav /owncloud/remote.php/caldav/ redirect;
-
-      	        rewrite ^/owncloud(/core/doc/[^\/]+/)$ /owncloud/$1/index.html;
-
-              	try_files $uri $uri/ /owncloud/index.php;
-        }
-
-	location ~ ^(.+?\.php)(/.*)?$ {
-              	try_files $1 = 404;
-
+		fastcgi_pass phpserver;
+		fastcgi_index index.php
 		include fastcgi_params;
-                fastcgi_param SCRIPT_FILENAME $document_root$1;
-      	        fastcgi_param PATH_INFO $2;
-              	# fastcgi_param HTTPS on;
-		fastcgi_pass unix:/var/run/php5-fpm.sock;
-        }
+
+    ## FastCGI cache.
+    ## cache ui for 5m (set the same interval of your crontab)
+    include global/fcgi_cache.conf;
+	}
+
+	location = /owncloud/remote.php {
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+    if (!-f $document_root$fastcgi_script_name) {
+        return 404;
+    }
+
+		fastcgi_pass phpserver;
+		fastcgi_index remote.php
+		include fastcgi_params;
+	}
+
+  ## Any other attempt to access PHP files returns a 404.
+  location ~* ^/owncloud/.+\.php$ {
+      return 404;
+  }
 
 	# Optional: set long EXPIRES header on static assets
-        location ~* ^.+\.(jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ {
-      	        expires 30d;
-              	# Optional: Don't log access to assets
-                access_log off;
-      	}
+	location ~* ^.+\.(jpg|jpeg|gif|bmp|ico|png|css|js|swf)$ {
+		expires max;
+		# No need to bleed constant updates. Send the all shebang in one
+		# fell swoop.
+		tcp_nodelay off;
+		# Set the OS file cache.
+		open_file_cache max=500 inactive=120s;
+		open_file_cache_valid 45s;
+		open_file_cache_min_uses 2;
+		open_file_cache_errors off;
+		# Optional: Don't log access to assets
+		access_log off;
+	}
 
 }
