--- a/DataContainer/nginx-conf/nginx/sites-available/apps/piwik.conf
+++ b/DataContainer/nginx-conf/nginx/sites-available/apps/piwik.conf
@@ -2,6 +2,8 @@
 #   https://github.com/perusio/piwik-nginx
 #   https://www.nginx.com/resources/wiki/start/topics/recipes/piwik/
 
+include global/php-upstream.conf
+
 location ^~ /piwik {
 
   # Include the cache map to decide when or not when to cache.
@@ -12,13 +14,12 @@ location ^~ /piwik {
   access_log /var/log/nginx/piwik_bennyli.de_access.log;
   error_log /var/log/nginx/piwik_bennyli.de_error.log;
 
-  root /var/www/piwik;
   index index.php
 
   # Disallow any usage of piwik assets if referer is non valid.
   location ~* ^/piwik/.+\.(?:css|gif|html?|jpe?g|js|png|swf)$ {
       # Defining the valid referers.
-      valid_referers none blocked *.mysite.com othersite.com;
+      valid_referers none blocked benny-li.de;
       if ($invalid_referer)  {
           return 444;
       }
