--- a/DataContainer/nginx-conf/nginx/global/fcgi_cache.conf
+++ b/DataContainer/nginx-conf/nginx/global/fcgi_cache.conf
@@ -22,7 +22,7 @@ fastcgi_ignore_headers Cache-Control Expires;
 fastcgi_cache_bypass $no_cache;
 fastcgi_no_cache $no_cache;
 ## Add a cache miss/hit status header.
-add_header X-Piwik-Cache $upstream_cache_status;
+add_header X-App-Cache $upstream_cache_status;
 ## To avoid any interaction with the cache control headers we expire
 ## everything on this location immediately.
 expires epoch;
