--- a/RaspberryPi/nodejs/Dockerfile
+++ b/RaspberryPi/nodejs/Dockerfile
@@ -6,17 +6,14 @@
 FROM resin/rpi-raspbian
 MAINTAINER Benny Li <benny@benny-li.de>
 
-ENV build_deps "build-essential"
-
 RUN apt-get update && \
     apt-get upgrade -y && \
-    apt-get install -y wget python && \
-    apt-get install -y ${build_deps}
+    apt-get install -y wget python build-essential
 
 RUN mkdir /usr/local/src/nodejs && \
     cd /usr/local/src/nodejs && \
     wget http://nodejs.org/dist/latest-v0.10.x/SHASUMS.txt && \
-    echo "http://nodejs.org/dist/latest-v0.10.x/$(sed -nr 's/.*(node-v0\.10\.[0-9]+\.tar\.gz).*/\1/p' SHASUMS.txt| head -1)" && \
+    wget $(echo "http://nodejs.org/dist/latest-v0.10.x/$(sed -nr 's/.*(node-v0\.10\.[0-9]+\.tar\.gz).*/\1/p' SHASUMS.txt| head -1)") && \
     tar xzf ./node*.tar.gz --strip-components=1 -C ./ && \
     ./configure && \
     make && \
@@ -25,5 +22,5 @@ RUN mkdir /usr/local/src/nodejs && \
     echo "Installed node.js version $(node -v)" && \
     echo "Installed npm version $(npm -v)"
 
-RUN apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false ${build_deps}
+RUN apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false build-essential
 RUN rm -rf /usr/local/src/*
