--- a/DataContainer/nginx-conf/nginx/sites-available/apps/ghost.conf
+++ b/DataContainer/nginx-conf/nginx/sites-available/apps/ghost.conf
@@ -1,4 +1,4 @@
-location /ghost/ {
+location /blog/ {
 	proxy_set_header X-Real-IP $remote_addr;
 	proxy_set_header X-Forwarder-For $remote_addr;
 	proxy_set_header Host $host;
