--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
-nginx_conf:
+nodejs:
+  build: ./RaspberryPi/base-nodejs/
+
+nginx-conf:
   build: ./DataContainer/nginx-conf/
 
 nginx:
@@ -6,11 +9,12 @@ nginx:
   ports:
     - "80:80"
     - "443:443"
-  volume_from:
-    - nginx_conf:ro
+  volumes_from:
+    - nginx-conf
   links:
     - ghost
 
 ghost:
   build: ./RaspberryPi/Ghost/
-  
+  links:
+    - nodejs
