Introducing Ansible for nginx + fix

--- a/RaspberryPi/nginx/DataContainer/Dockerfile
+++ b/RaspberryPi/nginx/DataContainer/Dockerfile
@@ -2,32 +2,38 @@
 # BUILD this with
 #   docker build --no-cache -t bennyli/nginx-conf .
 
-FROM resin/rpi-raspbian
+FROM bennyli/nginx
 MAINTAINER Benny Li <benny@benny-li.de>
 
-RUN mdkir -p /etc/nginx/global && \
-    mdkir -p /etc/nginx/sites-available/apps && \
-    mdkir -p /etc/nginx/sites-enabled/apps
+RUN mkdir -p /etc/nginx/global && \
+    mkdir -p /etc/nginx/sites-available/apps && \
+    mkdir -p /etc/nginx/sites-enabled/apps && \
+    mkdir -p /var/www
 
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
-COPY nginx/site-available/benny-li.conf /etc/nginx/site-available/benny-li.conf
-COPY nginx/site-available/benny-li-ssl.conf /etc/nginx/site-available/benny-li-ssl.conf
+COPY nginx/sites-available/benny-li.conf /etc/nginx/sites-available/benny-li.conf
+COPY nginx/sites-available/benny-li-ssl.conf /etc/nginx/sites-available/benny-li-ssl.conf
 
-COPY nginx/global/ghost-blog-upstream.conf /etc/nginx/global/ghost-blog-upstream.conf
+RUN ln -s /etc/nginx/sites-available/benny-li.conf /etc/nginx/sites-enabled/benny-li.conf
+RUN ln -s /etc/nginx/sites-available/benny-li-ssl.conf /etc/nginx/sites-enabled/benny-li-ssl.conf
 
-COPY nginx/site-available/apps/ghost.conf /etc/nginx/site-available/apps/ghost.conf
+COPY nginx/global/restrictions.conf /etc/nginx/global/restrictions.conf
+#COPY nginx/global/ghost-blog-upstream.conf /etc/nginx/global/ghost-blog-upstream.conf
+
+#COPY nginx/site-available/apps/ghost.conf /etc/nginx/site-available/apps/ghost.conf
 
 # Symlink active apps
-RUN ln -s /etc/nginx/sites-enabled/apps/ghost.conf /etc/nginx/sites-available/apps/ghost.conf
+#RUN ln -s /etc/nginx/sites-available/apps/ghost.conf /etc/nginx/sites-enabled/apps/ghost.conf
 
 
 # COPY CERT FILES (not provided)
-COPY nginx/cert/server.key /etc/nginx/certs/server.key
-COPY nginx/cert/ca.crt /etc/nginx/certs/ca.crt
-COPY nginx/cert/server-ca.crt /etc/nginx/certs/server-ca.crt
-COPY nginx/cert/server.crt /etc/nginx/certs/server.crt
+COPY nginx/certs/server.key /etc/nginx/certs/server.key
+COPY nginx/certs/ca.crt /etc/nginx/certs/ca.crt
+COPY nginx/certs/server-ca.crt /etc/nginx/certs/server-ca.crt
+COPY nginx/certs/server.crt /etc/nginx/certs/server.crt
 RUN cat /etc/nginx/certs/server-ca.crt /etc/nginx/certs/ca.crt > /etc/nginx/certs/chained-ca.crt && \
     cat /etc/nginx/certs/server.crt /etc/nginx/certs/chained-ca.crt > /etc/nginx/certs/server.chained.crt
 
 VOLUME ["/etc/nginx"]
+VOLUME ["/var/www"]
 CMD ["true"]
