--- a/RaspberryPi/nginx/DataContainer/nginx/global/restrictions.conf
+++ b/RaspberryPi/nginx/DataContainer/nginx/global/restrictions.conf
@@ -1,7 +1,14 @@
 # Global restrictions configuration file. Designed to be included in any server {} block.
 location = /favicon.ico {
+        # Support for favicon. Return a 1x1 transparent GIF it it doesn't
+        # exist.
 	log_not_found off;
 	access_log off;
+        try_files /favicon.ico @empty;
+}
+
+location @empty {
+        empty_gif;
 }
 
 location = /robots.txt {
